force-app/main/default/objects/Project_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Account associated with this project task. Links the task to the client account.</description>
    <inlineHelpText
  >Select the Account (client) that this project task is associated with. This allows you to filter and report on tasks by client.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>