force-app/main/default/objects/Project_Task__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <description
  >Actual number of hours spent on this task. Used to track time and compare against estimates.</description>
    <inlineHelpText
  >Enter the actual number of hours spent completing this task. Compare this to Estimated Hours to track project efficiency.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>