force-app/main/default/objects/Project_Task__c/fields/At_Risk_Due_to_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Due_to_Dependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox flag indicating that this task is at risk due to dependencies on other tasks. Manually set to identify tasks that may be delayed.</description>
    <inlineHelpText
  >Check this box to flag a task as at risk when it depends on other tasks that may cause delays. Used for project risk management and to identify tasks needing attention.</inlineHelpText>
    <label>At Risk Due to Dependencies</label>
    <type>Checkbox</type>
</CustomField>