force-app/main/default/objects/Project_Task__c/fields/Client_Approved_for_Completion__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_for_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox indicating that the client has approved this task for completion (post-QA approval). Set automatically by the approval workflow.</description>
    <inlineHelpText
  >This checkbox is automatically set to true when the client approves a completed task after PM/Code Reviewer approval. Once approved, the task status changes to Completed.</inlineHelpText>
    <label>Client Approved for Completion</label>
    <type>Checkbox</type>
</CustomField>