force-app/main/default/objects/Project_Task__c/fields/Client_Approved_for_Development__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_for_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox indicating that the client has approved this backlog task for development. Set automatically by the approval workflow.</description>
    <inlineHelpText
  >This checkbox is automatically set to true when the client approves a backlog task. Once approved, the task status changes to Pending and development can begin.</inlineHelpText>
    <label>Client Approved for Development</label>
    <type>Checkbox</type>
</CustomField>