force-app/main/default/objects/Project_Task__c/fields/Client_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Client_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Salesforce user who receives client-facing approval steps (backlog and completion). Populated automatically from Client User (Contact) when an active User exists for that contact.</description>
    <inlineHelpText
  >Used by Flow Approvals. Synced from Client User when possible; you can override manually if needed.</inlineHelpText>
    <label>Client Approver (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Tasks (Client Approver)</relationshipLabel>
    <relationshipName>Project_Tasks_As_Client_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>