force-app/main/default/objects/Project_Task__c/fields/Client_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Client_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by automation to determine when a client rejects a task.</description>
    <label>Client Rejected</label>
    <type>Checkbox</type>
</CustomField>