force-app/main/default/objects/Project_Task__c/fields/Current_Submission_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Submission_Step__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Current Submission Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>