force-app/main/default/objects/Project_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >Detailed description of the project task. Provides context, requirements, and implementation details.</description>
    <inlineHelpText
  >Enter a detailed description of the task, including requirements, acceptance criteria, and any relevant context for developers and reviewers.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>