force-app/main/default/objects/Project_Task__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer assigned to work on this task. The user responsible for implementing the task.</description>
    <inlineHelpText>Select the Developer who is assigned to work on this task. This field is typically left blank for parent tasks and populated for subtasks.</inlineHelpText>
    <label>Developer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Developer Tasks</relationshipLabel>
    <relationshipName>Developer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>