force-app/main/default/objects/Project_Task__c/fields/Developer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Full_Name__c</fullName>
    <description>Formula field that displays the Developer assigned to this task as first name and last name from the Developer lookup.</description>
    <formula>Developer__r.FirstName &amp; &apos; &apos; &amp;  Developer__r.LastName</formula>
    <label>Developer Full Name</label>
    <type>Text</type>
</CustomField>