force-app/main/default/objects/Project_Task__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <formula>Developer__r.FirstName &amp; &apos; &apos; &amp;  Developer__r.LastName</formula>
    <label>Developer Name</label>
    <type>Text</type>
</CustomField>