force-app/main/default/objects/Project_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date by which this task should be completed</description>
    <inlineHelpText>Set the target completion date for this task. Used to track deadlines and identify overdue tasks.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>