force-app/main/default/objects/Project_Task__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <description
  >Estimated number of hours required to complete this task. Used for planning and tracking against actual hours.</description>
    <inlineHelpText
  >Enter the estimated number of hours needed to complete this task. This helps with project planning and comparing estimates to actual time spent.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>