force-app/main/default/objects/Project_Task__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id for Legacy or Connected System Id</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for Legacy or Connected System Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>