force-app/main/default/objects/Project_Task__c/fields/Has_Client_User_Defined__c.field-meta.xml
<CustomField>
    <fullName>Has_Client_User_Defined__c</fullName>
    <description>Formula field that returns true if Client_User__c is populated</description>
    <formula>NOT(ISBLANK(Client_User__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Client User Defined</label>
    <type>Checkbox</type>
</CustomField>