force-app/main/default/objects/Project_Task__c/fields/Has_Developer__c.field-meta.xml
<CustomField>
    <fullName>Has_Developer__c</fullName>
    <description
  >Formula field that returns true if Developer__c is populated</description>
    <formula>NOT(ISBLANK(Developer__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Developer</label>
    <type>Checkbox</type>
</CustomField>