force-app/main/default/objects/Project_Task__c/fields/Has_Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent_Task__c</fullName>
    <description
  >Formula checkbox indicating if this task has a parent task. Returns true when Parent Task field is populated.</description>
    <formula>NOT(ISBLANK(Parent_Task__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field automatically returns true when a Parent Task is selected. Used for filtering and visibility rules to show/hide parent task sections on the record page.</inlineHelpText>
    <label>Has Parent Task</label>
    <type>Checkbox</type>
</CustomField>