force-app/main/default/objects/Project_Task__c/fields/Has_Related_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Related_Task__c</fullName>
    <description
  >Formula checkbox indicating if this task has a related task dependency. Returns true when there are related task relationships (either as Task A or Task B).</description>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field automatically returns true when this task has related task relationships. Used for filtering and visibility rules to show/hide related task sections on the record page.</inlineHelpText>
    <label>Has Related Task</label>
    <type>Checkbox</type>
</CustomField>