force-app/main/default/objects/Project_Task__c/fields/Has_Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Release_Notes__c</fullName>
    <description
  >Formula checkbox indicating if this task is linked to Release Notes. Returns true when Release Notes field is populated.</description>
    <formula>NOT(ISBLANK(Release_Notes__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field automatically returns true when Release Notes are linked to this task. Used for filtering and visibility rules to show/hide release notes sections on the record page.</inlineHelpText>
    <label>Has Release Notes</label>
    <type>Checkbox</type>
</CustomField>