force-app/main/default/objects/Project_Task__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <description>Formula checkbox indicating if the task is overdue (Due Date is in the past and task is not Completed or Closed)</description>
    <formula>AND(
    NOT(ISBLANK(Due_Date__c)),
    Due_Date__c &lt; TODAY(),
    TEXT(Status__c) != &quot;Completed&quot;,
    TEXT(Status__c) != &quot;Closed&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked when Due Date is in the past and task status is not Completed or Closed. Used for filtering and reporting on overdue tasks.</inlineHelpText>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>