force-app/main/default/objects/Project_Task__c/fields/Most_Recent_Project_Task_Submission__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Project_Task_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Project Task Submission</label>
    <referenceTo>Project_Task_Submission__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>