force-app/main/default/objects/Project_Task__c/fields/No_Client_Approver__c.field-meta.xml
<CustomField>
    <fullName>No_Client_Approver__c</fullName>
    <formula>ISBLANK( Client_Approver_User__c )</formula>
    <label>No Client Approver</label>
    <type>Checkbox</type>
</CustomField>