force-app/main/default/objects/Project_Task__c/fields/Owned_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_Current_User__c</fullName>
    <description>True when this task is in the running user&apos;s &quot;My Tasks&quot; scope: User assignment fields, Contact match on PM/Developer/Client, or they created the task. Account/Project OwnerId is omitted because cross-object OwnerId is not deployable in this org&apos;s formula validation. Used by the My Tasks list view because filterScope Mine cannot be deployed via Metadata API.</description>
    <formula>OR(
  Developer_User__c = $User.Id,
  PM_Approver_User__c = $User.Id,
  Client_Approver_User__c = $User.Id,
  Developer__c = $User.ContactId,
  Project_Manager__c = $User.ContactId,
  Client_User__c = $User.ContactId,
  CreatedById = $User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Tasks (current user)</label>
    <type>Checkbox</type>
</CustomField>