force-app/main/default/objects/Project_Task__c/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Parent task for this subtask. Used to create hierarchical task structures with parent-child relationships.</description>
    <inlineHelpText
  >Select the parent task if this is a subtask. Parent tasks show progress based on their subtasks. Leave blank if this is a top-level task.</inlineHelpText>
    <label>Parent Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Subtasks</relationshipLabel>
    <relationshipName>Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>