force-app/main/default/objects/Project_Task__c/fields/PM_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>PM_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user who receives PM / Code Reviewer approval requests. Populated automatically from Project Manager (Contact) when an active User exists for that contact.</description>
    <inlineHelpText>Used by Flow Approvals. Synced from Project Manager when possible; you can override manually if needed.</inlineHelpText>
    <label>PM Approver (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Tasks (PM Approver)</relationshipLabel>
    <relationshipName>Project_Tasks_As_PM_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>