force-app/main/default/objects/Project_Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>&quot;Medium&quot;</defaultValue>
    <description
  >Priority level of the project task (High, Medium, or Low). Used to prioritize work and determine urgency.</description>
    <inlineHelpText
  >Select the priority level for this task. High = urgent, needs immediate attention. Medium = normal priority (default). Low = can be deferred if needed.</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>