force-app/main/default/objects/Project_Task__c/fields/Priority_Icon__c.field-meta.xml
<CustomField>
    <fullName>Priority_Icon__c</fullName>
    <description
  >Visual priority indicator (emoji flag) for task priority. Formula field that displays colored flags based on Priority field value.</description>
    <formula>CASE(Priority__c, 
&quot;High&quot;, &quot;🔴&quot;, 
&quot;Medium&quot;, &quot;🟡&quot;, 
&quot;Low&quot;, &quot;🟢&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field displays colored flag emoji indicators: 🔴 High priority, 🟡 Medium priority, 🟢 Low priority. Used for quick visual identification in list views and highlight panels.</inlineHelpText>
    <label>Priority Icon</label>
    <type>Text</type>
</CustomField>