force-app/main/default/objects/Project_Task__c/fields/Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percentage__c</fullName>
    <description
  >Progress percentage of task completion. For parent tasks, calculated based on completed subtasks (excluding Removed subtasks).</description>
    <inlineHelpText
  >Shows the percentage of task completion. For parent tasks, this is automatically calculated based on the number of completed subtasks. Subtasks marked as Removed are not counted against progress.</inlineHelpText>
    <label>Progress Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>