force-app/main/default/objects/Project_Task__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Manager responsible for overseeing this task.</description>
    <inlineHelpText>Select the Project Manager who is responsible for overseeing this task.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Manager Tasks</relationshipLabel>
    <relationshipName>Project_Manager_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>