force-app/main/default/objects/Project_Task__c/fields/Project_Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Full_Name__c</fullName>
    <description>Formula field that displays the Project Manager for this task as first name and last name from the Project Manager lookup.</description>
    <formula>Project_Manager__r.FirstName &amp;  &quot;&quot; &amp; Project_Manager__r.LastName</formula>
    <label>Project Manager Full Name</label>
    <type>Text</type>
</CustomField>