force-app/main/default/objects/Project_Task__c/fields/Ready_for_Client_Completion_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Client_Completion_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Client Completion Review</label>
    <type>Checkbox</type>
</CustomField>