force-app/main/default/objects/Project_Task__c/fields/Ready_for_Client_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Client_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox indicating that a backlog task is ready for client review and approval. Triggers the client approval workflow.</description>
    <inlineHelpText
  >Check this box when a backlog task is ready for client review. This triggers an approval workflow that sends the task to the client for approval before development begins.</inlineHelpText>
    <label>Ready for Client Review</label>
    <type>Checkbox</type>
</CustomField>