force-app/main/default/objects/Project_Task__c/fields/Rejected_by_PM_Code_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_PM_Code_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected by PM/Code Reviewer</label>
    <type>Checkbox</type>
</CustomField>