force-app/main/default/objects/Project_Task__c/fields/Related_Task__c.field-meta.xml
<CustomField>
    <fullName>Related_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related task that has a dependency relationship with this task. Used to track task dependencies and relationships.</description>
    <inlineHelpText>Select a related task if this task has a dependency on another task. Use Relationship Type to specify if it&apos;s a blocking or non-blocking dependency.</inlineHelpText>
    <label>Related Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Related Tasks</relationshipLabel>
    <relationshipName>Related_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>