force-app/main/default/objects/Project_Task__c/fields/Review_Status_Icons__c.field-meta.xml
<CustomField>
    <fullName>Review_Status_Icons__c</fullName>
    <description
  >Visual review status indicators showing approval workflow status. Formula field that displays review status icons based on task status and approval flags.</description>
    <formula>IF(TEXT(Status__c) = &quot;In Review&quot;, 
&quot;PM Review: &quot; + IF(Reviewed_by_PM_Code_Reviewer__c, &quot;Approved ✅&quot;, &quot;Pending ⏳&quot;) + &quot; → Client Completion: &quot; + IF(Client_Approved_for_Completion__c, &quot;Approved ✅&quot;, IF(Reviewed_by_PM_Code_Reviewer__c, &quot;Pending ⏳&quot;, &quot;Waiting&quot;)), 
IF(TEXT(Status__c) = &quot;Backlog&quot;, 
IF(Ready_for_Client_Review__c, &quot;Ready for Review 📋 → Client Development: &quot; + IF(Client_Approved_for_Development__c, &quot;Approved ✅&quot;, &quot;Pending ⏳&quot;), &quot;&quot;), 
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field displays review status with descriptive text and icons showing the approval workflow progress. For In Review tasks: Shows PM Review status and Client Completion Approval status. For Backlog tasks: Shows if ready for review and Client Development Approval status. Used for quick visual identification of review workflow progress in list views.</inlineHelpText>
    <label>Review Status Icons</label>
    <type>Text</type>
</CustomField>