force-app/main/default/objects/Project_Task__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date when work on this task should begin</description>
    <inlineHelpText>Set the planned start date for this task. Used to track when work should begin and calculate duration.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>