force-app/main/default/objects/Project_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Backlog&quot;</defaultValue>
    <description>Current status of the project task. Tracks the task through its lifecycle from Backlog to Closed.</description>
    <inlineHelpText>Select the current status of this task. Backlog = needs to be written and approved by client. Pending = waiting to be assigned and started. In Progress = currently being worked on. In Review = ready for review or being reviewed. Blocked = needs more information from client. Completed = work reviewed and ready to deploy. Removed = no longer prioritized. Closed = deployed to production.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <color>#E5E5E5</color>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#FFB75D</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#0176D3</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <color>#5B21B6</color>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#C23934</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#2E844A</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Removed</fullName>
                <color>#706E6B</color>
                <label>Removed</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#1B5E20</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>