force-app/main/default/objects/Project_Task__c/fields/Status_Color_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Color_Indicator__c</fullName>
    <description
  >Visual color indicator (emoji) for task status. Formula field that displays colored circles based on Status field value.</description>
    <formula>CASE(Status__c, 
&quot;Backlog&quot;, &quot;⚪&quot;, 
&quot;Pending&quot;, &quot;🟡&quot;, 
&quot;In Progress&quot;, &quot;🟠&quot;, 
&quot;In Review&quot;, &quot;🔵&quot;, 
&quot;Blocked&quot;, &quot;🔴&quot;, 
&quot;Completed&quot;, &quot;🟢&quot;, 
&quot;Removed&quot;, &quot;⚫&quot;, 
&quot;Closed&quot;, &quot;🟢&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >This formula field displays colored emoji indicators: ⚪ Backlog, 🟡 Pending, 🟠 In Progress, 🔵 In Review, 🔴 Blocked, 🟢 Completed/Closed, ⚫ Removed. Used for quick visual identification in list views and highlight panels.</inlineHelpText>
    <label>Status Color Indicator</label>
    <type>Text</type>
</CustomField>