force-app/main/default/objects/Project_Task__c/fields/Submitted_for_PM_Code_Review__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_PM_Code_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for PM Code Review</label>
    <type>Checkbox</type>
</CustomField>