force-app/main/default/objects/Project_Task__c/fields/Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours__c</fullName>
    <description
  >Total actual hours spent on this task and all its subtasks. Automatically calculated from subtask actual hours.</description>
    <inlineHelpText
  >This field automatically sums the Actual Hours from all subtasks. For parent tasks, this shows the total actual time spent on the entire task hierarchy.</inlineHelpText>
    <label>Total Actual Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>