force-app/main/default/objects/Project_Task__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <description
  >Total estimated hours for this task and all its subtasks. Automatically calculated from subtask estimates.</description>
    <inlineHelpText
  >This field automatically sums the Estimated Hours from all subtasks. For parent tasks, this shows the total estimated time for the entire task hierarchy.</inlineHelpText>
    <label>Total Estimated Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>