force-app/main/default/objects/Project_Task__c/recordTypes/Data_Migration.recordType-meta.xml
<RecordType>
    <fullName>Data_Migration</fullName>
    <active>true</active>
    <label>Data Migration</label>
</RecordType>